unit_test_output.txt

> tono@0.1.0 test
> jest __tests__/unit/validation/toneValidation.test.ts __tests__/unit/lib/config.test.ts __tests__/unit/lib/api/errorHandler.test.ts __tests__/unit/lib/openai/toneAiService.test.ts

PASS __tests__/unit/validation/toneValidation.test.ts
PASS __tests__/unit/lib/openai/toneAiService.test.ts
  ● Console

    console.error
      OpenAI API error: Error: API error
          at Object.<anonymous> (C:\Users\migna\Documents\tono\__tests__\unit\lib\openai\toneAiService.test.ts:77:69)
          at Promise.finally.completed (C:\Users\migna\Documents\tono\node_modules\jest-circus\build\jestAdapterInit.js:1557:28)
          at new Promise (<anonymous>)
          at callAsyncCircusFn (C:\Users\migna\Documents\tono\node_modules\jest-circus\build\jestAdapterInit.js:1497:10)
          at _callCircusTest (C:\Users\migna\Documents\tono\node_modules\jest-circus\build\jestAdapterInit.js:1007:40)
          at _runTest (C:\Users\migna\Documents\tono\node_modules\jest-circus\build\jestAdapterInit.js:947:3)
          at C:\Users\migna\Documents\tono\node_modules\jest-circus\build\jestAdapterInit.js:849:7
          at _runTestsForDescribeBlock (C:\Users\migna\Documents\tono\node_modules\jest-circus\build\jestAdapterInit.js:862:11)
          at _runTestsForDescribeBlock (C:\Users\migna\Documents\tono\node_modules\jest-circus\build\jestAdapterInit.js:857:11)
          at run (C:\Users\migna\Documents\tono\node_modules\jest-circus\build\jestAdapterInit.js:761:3)
          at runAndTransformResultsToJestFormat (C:\Users\migna\Documents\tono\node_modules\jest-circus\build\jestAdapterInit.js:1918:21)
          at jestAdapter (C:\Users\migna\Documents\tono\node_modules\jest-circus\build\runner.js:101:19)
          at runTestInternal (C:\Users\migna\Documents\tono\node_modules\jest-runner\build\index.js:275:16)
          at runTest (C:\Users\migna\Documents\tono\node_modules\jest-runner\build\index.js:343:7)

    [0m [90m 147 |[39m     }
     [90m 148 |[39m   } [36mcatch[39m (aiError) {
    [31m[1m>[22m[39m[90m 149 |[39m     console[33m.[39merror([32m'OpenAI API error:'[39m[33m,[39m aiError)[33m;[39m
     [90m     |[39m             [31m[1m^[22m[39m
     [90m 150 |[39m
     [90m 151 |[39m     [36mreturn[39m {
     [90m 152 |[39m       ampSettings[33m:[39m defaultResult[33m.[39mampSettings[33m,[39m[0m

      at error (lib/openai/toneAiService.ts:149:13)
      at Object.<anonymous> (__tests__/unit/lib/openai/toneAiService.test.ts:79:20)

    console.warn
      Failed to parse AI response as JSON: SyntaxError: Unexpected token 'N', "Not JSON" is not valid JSON
          at JSON.parse (<anonymous>)
          at parse (C:\Users\migna\Documents\tono\lib\openai\toneAiService.ts:128:27)
          at Object.<anonymous> (C:\Users\migna\Documents\tono\__tests__\unit\lib\openai\toneAiService.test.ts:98:20)

    [0m [90m 138 |[39m       [36mreturn[39m result[33m;[39m
     [90m 139 |[39m     } [36mcatch[39m (parseErr) {
    [31m[1m>[22m[39m[90m 140 |[39m       console[33m.[39mwarn([32m'Failed to parse AI response as JSON:'[39m[33m,[39m parseErr)[33m;[39m
     [90m     |[39m               [31m[1m^[22m[39m
     [90m 141 |[39m       console[33m.[39mwarn([32m'AI Response:'[39m[33m,[39m aiResponse)[33m;[39m
     [90m 142 |[39m
     [90m 143 |[39m       [36mreturn[39m {[0m

      at warn (lib/openai/toneAiService.ts:140:15)
      at Object.<anonymous> (__tests__/unit/lib/openai/toneAiService.test.ts:98:20)

    console.warn
      AI Response: Not JSON

    [0m [90m 139 |[39m     } [36mcatch[39m (parseErr) {
     [90m 140 |[39m       console[33m.[39mwarn([32m'Failed to parse AI response as JSON:'[39m[33m,[39m parseErr)[33m;[39m
    [31m[1m>[22m[39m[90m 141 |[39m       console[33m.[39mwarn([32m'AI Response:'[39m[33m,[39m aiResponse)[33m;[39m
     [90m     |[39m               [31m[1m^[22m[39m
     [90m 142 |[39m
     [90m 143 |[39m       [36mreturn[39m {
     [90m 144 |[39m         ampSettings[33m:[39m defaultResult[33m.[39mampSettings[33m,[39m[0m

      at warn (lib/openai/toneAiService.ts:141:15)
      at Object.<anonymous> (__tests__/unit/lib/openai/toneAiService.test.ts:98:20)

PASS __tests__/unit/lib/config.test.ts
FAIL __tests__/unit/lib/api/errorHandler.test.ts
  ● Test suite failed to run

    ReferenceError: Request is not defined

    [0m [90m 20 |[39m     error[33m:[39m error [36minstanceof[39m [33mError[39m [33m?[39m error[33m.[39mmessage [33m:[39m [32m'Unknown error'[39m[33m,[39m
     [90m 21 |[39m     stack[33m:[39m error [36minstanceof[39m [33mError[39m [33m?[39m error[33m.[39mstack [33m:[39m undefined[33m,[39m
    [31m[1m>[22m[39m[90m 22 |[39m   }[33m;[39m
     [90m    |[39m               [31m[1m^[22m[39m
     [90m 23 |[39m
     [90m 24 |[39m   [36mif[39m (error [36minstanceof[39m [33mAPIError[39m) {
     [90m 25 |[39m     console[33m.[39merror([32m'API Error:'[39m[33m,[39m [33mJSON[39m[33m.[39mstringify(logData))[33m;[39m[0m

      at Object.Request (node_modules/next/src/server/web/spec-extension/request.ts:14:34)
      at Object.<anonymous> (node_modules/next/server.js:2:16)
      at Object.<anonymous> (lib/api/errorHandler.ts:22:17)
      at Object.<anonymous> (__tests__/unit/lib/api/errorHandler.test.ts:5:23)

Test Suites: 1 failed, 3 passed, 4 total
Tests:       25 passed, 25 total
Snapshots:   0 total
Time:        1.329 s
Ran all test suites matching __tests__/unit/validation/toneValidation.test.ts|__tests__/unit/lib/config.test.ts|__tests__/unit/lib/api/errorHandler.test.ts|__tests__/unit/lib/openai/toneAiService.test.ts.
